Bug 14307 - VFS modules should ignore S-1-5-88 NFS ACEs
Summary: VFS modules should ignore S-1-5-88 NFS ACEs
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-02 14:25 UTC by Ralph Böhme
Modified: 2020-03-19 09:40 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix from master. (1.37 KB, patch)
2020-03-06 22:09 UTC, Jeremy Allison
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2020-03-02 14:25:59 UTC
The POSIX ACL code as well the vfs_acl_[xattr|tdb] code already ignore set ACL requests which contain NFS ACEs, but a bunch of other VFS module are lacking this special handling.

Have patch, need bugnumber...
Comment 2 Jeremy Allison 2020-03-06 22:09:59 UTC
Created attachment 15849 [details]
git-am fix from master.

Cherry-picked from master. Applies to 4.12.next, 4.11.next.
Comment 3 Ralph Böhme 2020-03-16 13:11:39 UTC
Reassigning to Karolin for inclusion in 4.11 and 4.12.
Comment 4 Karolin Seeger 2020-03-18 10:22:43 UTC
(In reply to Ralph Böhme from comment #3)
Pushed to autobuild-v4-{12,11}-test.
Comment 5 Karolin Seeger 2020-03-19 09:40:23 UTC
(In reply to Karolin Seeger from comment #4)
Pushed to both branches.
Closing out bug report.

Thanks!